@@ -1,17 +1,19 @@
 package org.mycore.ubo.importer.scopus;
 
+import org.jdom2.Document;
+import org.jdom2.JDOMException;
+import org.mycore.common.content.MCRURLContent;
+import org.xml.sax.SAXException;
+
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
 import java.util.Locale;
-
-import org.jdom2.Document;
-import org.jdom2.JDOMException;
-import org.mycore.common.content.MCRURLContent;
-import org.xml.sax.SAXException;
 
 public class ScopusQuery extends AbstractScopusQuery{
 
@@ -42,13 +44,13 @@ public class ScopusQuery extends AbstractScopusQuery{
         setCount(count);
     }
 
-    private URL buildQueryURL() throws MalformedURLException {
+    private URL buildQueryURL() throws MalformedURLException, URISyntaxException {
         String encodedQuery = URLEncoder.encode(getQuery(), StandardCharsets.UTF_8);
         String queryString = String.format(Locale.ROOT, QUERY_PATTERN, encodedQuery, API_KEY, INST_TOKEN, getCount());
-        return new URL(API_URL + queryString);
+        return new URI(API_URL + queryString).toURL();
     }
 
-    public List<String> resolveIDs() throws JDOMException, IOException, SAXException {
+    public List<String> resolveIDs() throws JDOMException, IOException, SAXException, URISyntaxException {
         Document response = new MCRURLContent(buildQueryURL()).asXML();
         return getEntryScopusIDs(response);
     }
